prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_complex_assign_mismatch.diag.txt
ERROR: expression of type 'string' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_complex_assign_mismatch.nut:4:0

local x: int = 42
x = "hello"
^
return x


